# llm-mafia

./: .gitignore  .golangci.yaml  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  pyproject.toml
docs/: README.md  engine.md  game-data-flow.md  implementation-plan.md  kafka.md  learning-resources.md  pre-commit.md  study-notes.md
src/engine/: go.mod  go.sum
src/engine/cmd/engine/: main.go
src/engine/internal/config/: config.go  config_test.go
src/engine/internal/domain/: phase.go  phase_test.go  player.go  player_test.go  rules.go  rules_test.go  state.go  state_test.go  voting.go  voting_test.go
src/engine/internal/engine/: commands.go  commands_test.go  effects.go  effects_test.go  engine.go  handlers.go  handlers_test.go  loop.go  timers.go  timers_test.go
src/engine/internal/events/: serialization.go  serialization_test.go  types.go
src/engine/internal/kafka/: consumer.go  message.go  producer.go  topics.go
src/engine/internal/names/: generator.go  generator_test.go
src/scripts/bootstrap/: run.sh
src/scripts/bootstrap/kafka/: install.sh  kafka-cluster.yaml
src/scripts/bootstrap/kafka/topics/: game-topics.yaml
src/scripts/bootstrap/kind-cluster/: install.sh  kind-config.yaml
src/scripts/helpers/: check-commands.sh
src/scripts/kind-cluster-bootstrap/: kind-config.yaml  run.sh
