# Setuptools used for building and installing python packages
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "mafia"
version = "0.1.0"
description = "Kubernetes pods playing mafia using LLM reasoning"
requires-python = ">=3.12"

dependencies = [
    # Mandatory project dependencies
]


[project.optional-dependencies]
all = ["mafia[dev,test,docs]"]

dev = [
  "ruff>=0.4.0",
  "mypy>=1.8.0",
  "pre-commit>=3.6.0",
  "detect-secrets>=1.5.0"
]

test = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0"
]

docs = [
  "sphinx>=7.2.0",
  "sphinx-rtd-theme>=2.0.0"
]


[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "UP"]
fixable = ["ALL"]

[tool.mypy]
python_version = "3.12"
strict = true
